--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prettify-time",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Takes seconds and turns it into human readable string. See examples.",
   "main": "PrettifyTime.min.js",
   "scripts": {
@@ -16,6 +16,10 @@
     "readable",
     "duration"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arnireynir/prettify-time"
+  }
   "author": "Árni Reynir Óskarsson",
   "license": "MIT",
   "devDependencies": {
