--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "karma": "^0.13.22",
     "mocha": "^2.4.5",
     "uglify-js": "^2.6.2"
+  },
+  "dependencies": {
+    "codecov": "^1.0.1"
   }
 }
