--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha ./tests/*-spec.js",
     "test:dev": "mocha ./tests/*-spec.js --watch",
     "compress": "uglifyjs src/app.js > PrettifyTime.min.js",
-    "coverage": "istanbul cover _mocha ./tests/*-spec.js -- -R spec"
+    "coverage": "istanbul cover _mocha ./tests/*-spec.js -- -R spec && codecov"
   },
   "keywords": [
     "time",
@@ -29,9 +29,7 @@
     "istanbul": "^0.4.3",
     "karma": "^0.13.22",
     "mocha": "^2.4.5",
-    "uglify-js": "^2.6.2"
-  },
-  "dependencies": {
+    "uglify-js": "^2.6.2",
     "codecov": "^1.0.1"
   }
 }
