--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha ./tests/*-spec.js",
     "test:dev": "mocha ./tests/*-spec.js --watch",
-    "prepublish": "uglifyjs src/app.js > PrettifyTime.min.js",
+    "prepublish": "uglifyjs src/PrettifyTime.js > PrettifyTime.min.js",
     "coverage": "istanbul cover _mocha ./tests/*-spec.js -- -R spec && codecov"
   },
   "keywords": [
