--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
   "name": "prettify-time",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Takes seconds and turns it into human readable string.",
   "main": "PrettifyTime.min.js",
-  "scripts": {
-    "test": "mocha ./tests/*-spec.js",
-    "test:dev": "mocha ./tests/*-spec.js --watch",
-    "prepublish": "uglifyjs src/PrettifyTime.js > PrettifyTime.min.js",
-    "coverage": "istanbul cover _mocha ./tests/*-spec.js -- -R spec && codecov"
-  },
   "keywords": [
     "time",
     "convert",
@@ -23,13 +17,5 @@
   },
   "tonicExampleFilename": "./src/example.js",
   "author": "Árni Reynir Óskarsson",
-  "license": "MIT",
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "istanbul": "^0.4.3",
-    "karma": "^0.13.22",
-    "mocha": "^2.4.5",
-    "uglify-js": "^2.6.2",
-    "codecov": "^1.0.1"
-  }
+  "license": "MIT"
 }
